persist pg data after stopping docker container

--- a/feedalerts/docker-compose.yml
+++ b/feedalerts/docker-compose.yml
@@ -2,7 +2,10 @@ version: '3'
 
 services:
   db:
-    image: postgres
+    image: postgres:latest
+    restart: always
+    volumes:
+      - ./database:/var/lib/postgresql/data
   web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
@@ -12,4 +15,3 @@ services:
       - "8000:8000"
     depends_on:
       - db
-
