verify db is up before starting web

--- a/feedalerts/docker-compose.yml
+++ b/feedalerts/docker-compose.yml
@@ -8,10 +8,21 @@ services:
       - ./database:/var/lib/postgresql/data
   web:
     build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
+    command: >
+      /bin/bash -c "
+        apt-get update
+        apt-get -y install netcat
+        while ! nc -z db 5432;
+        do
+          echo sleeping;
+          sleep 1;
+        done;
+        echo Connected!;
+        python3 manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
       - "8000:8000"
     depends_on:
       - db
+    
