update python docker image with nc

--- a/feedalerts/Dockerfile
+++ b/feedalerts/Dockerfile
@@ -4,4 +4,6 @@ RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
 RUN pip install -r requirements.txt
+RUN apt-get update
+RUN apt-get -y install netcat 
 ADD . /code/
