--- a/feedalerts/Dockerfile
+++ b/feedalerts/Dockerfile
@@ -5,5 +5,7 @@ WORKDIR /code
 ADD requirements.txt /code/
 RUN pip install -r requirements.txt
 RUN apt-get update
-RUN apt-get -y install netcat 
+RUN apt-get -y install netcat
+RUN apt-get -y install cron
+RUN apt-get -y install vim
 ADD . /code/
